@@ -35,7 +35,7 @@ class ContentModelArticles extends JModelList
 		$session = JFactory::getSession();
 
 		// Adjust the context to support modal layouts.
-		if ($layout = JRequest::getVar('layout', 'default')) {
+		if ($layout = JRequest::getVar('layout')) {
 			$this->context .= '.'.$layout;
 		}
 
@@ -50,9 +50,6 @@ class ContentModelArticles extends JModelList
 
 		$categoryId = $app->getUserStateFromRequest($this->context.'.filter.category_id', 'filter_category_id');
 		$this->setState('filter.category_id', $categoryId);
-
-		// set the value of the category filter for the single record edit view
-		$session->set('com_content.article.filter.category_id',$categoryId);
 
 		$language = $app->getUserStateFromRequest($this->context.'.filter.language', 'filter_language', '');
 		$this->setState('filter.language', $language);
