@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 29-Oct-2010 Andrew Eddie
  # Fixed issue [#21260] ACL Permissions for Authors to Edit Own Content Items Missing (James Brice, Elin Waring, Michael Babker).
+ # Fixed issue [#22389] JFormFieldCategory et al not selecting default from list view (Boris Baddenoff, Mathavan Jeyadev).
  
 28-Oct-2010 Mark Dexter
  # [#22878] Contact menu items don't work correctly with published state of contacts and contact categories
